<resources>
    <string name="app_name" translatable="false">Monparti</string>

    <!--- Listado -->
    <string-array name="spinnerCategoria">
        <item>Elegir categoría</item>
        <item>Monumentos</item>
        <item>Parques</item>
        <item>Tiendas</item>
    </string-array>
    <string name="botonMapa">Mapa</string>

    <!--- Añadir / Editar / Ver-->
    <string name="labelNombre">Nombre: </string>
    <string name="labelDescripcion">Descripción: </string>
    <string name="labelHorario">Horario: </string>
    <string name="labelGuion" translatable="false"> - </string>
    <string name="labelNota">Nota: </string>
    <string name="labelCategoria">Categoría: </string>
    <string name="picker">Seleccionar hora</string>
    <string name="posicion">Posición actual</string>
    <string name="noFoto">No hay foto seleccionada</string>
    <!--- Diálogo eliminar-->
    <string name="botonAceptar">Aceptar</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="title_activity_ver_lugar">VerLugar</string>

    <!--- Ventana Listado-->
    <string name="btnVerMapa">Ver en Mapa</string>
    <string name="text_location_permission">Conceder permisos de localización</string>
    <string name="title_location_permission">Permisos de localización</string>

    <!--- Pregunta de permisos-->
    <string name="tituloPermisosLoc">Se necesitan permisos de geolocalización</string>
    <string name="mensajePermisosLoc">Esta aplicación necesita permisos de geolocalización, por favor acepte esta petición para poder usar dicha funcionalidad</string>
    <string name="botonAceptarPermisos" translatable="false">OK</string>
    <string name="pDenegado">Permiso denegado</string>

    <!--- Conexión-->
    <string name="rellenarCampos">Debe rellenar todos los campos</string>
    <string name="errorCargarInfo">Error al cargar la información</string>
    <string name="conexFallida">Conexión fallida: </string>

    <!--- Ubicación-->
    <string name="marcaLugar">Lugar indicado</string>
    <string name="dialogLocat">Habilitar ubicación</string>
    <string name="locationSetting">Sus ajustes de ubicación están deshabilitados.</string>
    <string name="locationSetting2">Por favor, habilítelos para utilizar Monparti</string>
    <string name="botonLocSet">Ajustes de ubicación</string>
    <string name="secExcep">Excepción de seguridad</string>

    <!--- Eliminar-->
    <string name="eliminarLugar">Eliminar Lugar</string>
    <string name="mensajeEliminar">¿Está seguro que desea eliminar el lugar?</string>
    <string name="lugarBorradoConfirm">Lugar Borrado</string>
    <string name="botonCancel">Cancel</string>
    <string name="errorEliminar">Error al eliminar lugar</string>
</resources>
