<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jsureda.monparti.VerLugar"
    tools:showIn="@layout/activity_ver_lugar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="517dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNombreVer"
                    style="@style/Label"
                    android:text="@string/labelNombre" />

                <TextView
                    android:id="@+id/lblNombreDB"
                    style="@style/Label"
                    android:layout_width="match_parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDescVer"
                    style="@style/Label"
                    android:text="@string/labelDescripcion" />

                <TextView
                    android:id="@+id/lblDescDB"
                    style="@style/Label"
                    android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCatVer"
                    style="@style/Label"
                    android:text="@string/labelCategoria" />

                <TextView
                    android:id="@+id/lblCatDB"
                    style="@style/Label"
                    android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblHorVer"
                    style="@style/Label"
                    android:text="@string/labelHorario" />

                <TextView
                    android:id="@+id/lblHorDB2"
                    style="@style/Label"
                    android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNotaVer"
                    style="@style/Label"
                    android:text="@string/labelNota" />

                <RatingBar
                    android:id="@+id/barraNotaVer"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/mapViewVer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgVer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sinimagen" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
