<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jsureda.monparti.IntroducirLugar"
    tools:showIn="@layout/activity_introducir_lugar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <LinearLayout
            android:id="@+id/layAned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNombreANed"
                    style="@style/Label"
                    android:text="@string/labelNombre" />

                <EditText
                    android:id="@+id/txtNombreAned"
                    style="@style/TextoEditable"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="false" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDescAned"
                    style="@style/Label"
                    android:text="@string/labelDescripcion" />

                <EditText
                    android:id="@+id/txtDescAned"
                    style="@style/TextoEditable"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblHorarioAned"
                    style="@style/Label"
                    android:text="@string/labelHorario" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtAbreAned"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/TextoEditable"
                        android:focusableInTouchMode="false"
                        android:inputType="time" />

                    <TextView
                        android:id="@+id/lblGuion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelGuion" />

                    <EditText
                        android:id="@+id/txtCierraAned"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/TextoEditable"
                        android:focusableInTouchMode="false"
                        android:inputType="time" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCatAned"
                    android:layout_width="250dp"
                    style="@style/Label"
                    android:text="@string/labelCategoria" />

                <Spinner
                    android:id="@+id/spnCatAned"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNotaAned"
                    style="@style/Label"
                    android:text="@string/labelNota"
                    android:layout_width="250dp"/>

                <RatingBar
                    android:id="@+id/barraNotaAned"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAned"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sinimagen" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/iBtnCamara"
                        style="@style/BotonesConImagen"
                        app:srcCompat="@drawable/btncam" />

                    <ImageButton
                        android:id="@+id/iBtnGaleria"
                        style="@style/BotonesConImagen"
                        app:srcCompat="@drawable/btngaleria" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/mapViewAned"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/iBtnGuardar"
                    style="@style/BotonesConImagen"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/markmap" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
